--- a/src/1. 객체 지향 설계와 스프링.md
+++ b/src/1. 객체 지향 설계와 스프링.md
@@ -1,1 +1,13 @@
-# 테스트입니다
+# 스프링의 진짜 핵심
+
+- 스프링은 자바 언어 기반의 프레임워크
+- 자바 언어의 가장 큰 특징 - 객체 지향 언어
+- 스프링은 객체 지향 언어가 가진 강력한 특징을 살려내는 프레임워크
+- 스프링은 좋은 객체 지향 애플리케이션을 개발할 수 있게 도와주는 프레임워크
+
+## 역할과 구현을 분리
+- 객체 설계시 역할(인터페이스)를 먼저 부여하고, 그 역할을 수행하는 구현 객체 만들기
+- 인터페이스를 안정적으로 잘 설계하는 것이 중요
+
+
+ 
