--- a/src/1. 객체 지향 설계와 스프링.md
+++ b/src/1. 객체 지향 설계와 스프링.md
@@ -1,15 +1,22 @@
-# 스프링의 진짜 핵심
+## 스프링의 진짜 핵심
 
 - 스프링은 자바 언어 기반의 프레임워크
 - 자바 언어의 가장 큰 특징 - 객체 지향 언어
 - 스프링은 객체 지향 언어가 가진 강력한 특징을 살려내는 프레임워크
 - 스프링은 좋은 객체 지향 애플리케이션을 개발할 수 있게 도와주는 프레임워크
 
-
 ## 역할과 구현을 분리
 
 - 객체 설계시 역할(인터페이스)를 먼저 부여하고, 그 역할을 수행하는 구현 객체 만들기
 - 인터페이스를 안정적으로 잘 설계하는 것이 중요
 
+## 좋은 객체 지향 설계의 5가지 원칙(SOLID)
 
- 
+- SRP : 단일 책임 원칙(single responsibility principle) => 한 클래스는 하나의 책임만 가져야 한다. 중요한 기준은 변경이다.
+- OCP : 개방-폐쇄 원칙(Open/closed principle) => 확장에는 열려 있으나 변경에는 닫혀 있어야 한다.
+- LSP : 리스코프 치환 원칙(Liskov substitution principle) => 프로그램의 객체는 프로그램의 정확성을 깨뜨리지 않으면서 하위 타입의 인스턴스로 바꿀
+  수 있어야 한다
+- ISP : 인터페이스 분리 원칙(Interface segregation principle) => 특정 클라이언트를 위한 인터페이스 여러 개가 범용 인터페이스 하나보다 낫다
+- DIP : 의존관계 역전 원칙(Dependency inversion principle) => 역할(Role)에 의존하게 해야 한다.
+
+객체지향의 핵심은 다형성이지만, 다형성 만으로는 OCP, DIP를 지킬 수 없다. 그래서 스프링을 사용하여 OCP, DIP를 가능하게 지원한다.
