--- a/src/1. 객체 지향 설계와 스프링.md
+++ b/src/1. 객체 지향 설계와 스프링.md
@@ -17,6 +17,6 @@
 - LSP : 리스코프 치환 원칙(Liskov substitution principle) => 프로그램의 객체는 프로그램의 정확성을 깨뜨리지 않으면서 하위 타입의 인스턴스로 바꿀
   수 있어야 한다
 - ISP : 인터페이스 분리 원칙(Interface segregation principle) => 특정 클라이언트를 위한 인터페이스 여러 개가 범용 인터페이스 하나보다 낫다
-- DIP : 의존관계 역전 원칙(Dependency inversion principle) => 역할(Role)에 의존하게 해야 한다.
+- DIP : 의존관계 역전 원칙(Dependency inversion principle) => 역할(Role)에 의존하게 해야 한다.(인터페이스에 의존해라.)
 
 객체지향의 핵심은 다형성이지만, 다형성 만으로는 OCP, DIP를 지킬 수 없다. 그래서 스프링을 사용하여 OCP, DIP를 가능하게 지원한다.
