섹션 7. 의존관계 자동 주입

--- a/src/섹션 7. 의존관계 자동 주입.md
+++ b/src/섹션 7. 의존관계 자동 주입.md
@@ -1,2 +1,7 @@
 - @RequiredArgsConstructor 기능을 사용하면 final이 붙은 필드를 모아서
 생성자를 자동으로 만들어준다. (코드에서는 보이지 않지만 실제 호출 가능하다.)
+
+
+-  @Primary 는 기본값 처럼 동작하는 것이고, @Qualifier 는 매우 상세하게 동작한다. 이런 경우 어떤 것이
+   우선권을 가져갈까? 스프링은 자동보다는 수동이, 넒은 범위의 선택권 보다는 좁은 범위의 선택권이 우선 순
+   위가 높다. 따라서 여기서도 @Qualifier 가 우선권이 높다.
